--- a/NIINM/lab.html
+++ b/NIINM/lab.html
@@ -119,7 +119,7 @@
 				                </ul>
 				        	</li>
 				            <li><a href="asinem.html">Ассоциация</a></li>
-				            <li><a href="#">Последние Разработки</a></li>
+				            <li><a href="nir.html">Последние Разработки</a></li>
 				            <li><a href="#">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
 				            <li class="current-page"><a href="lab.html">Лаборатория</a></li>
@@ -286,7 +286,7 @@
 								<ul class="footer-menu__links">
 									<li><a href="about.html">ОБ ИНСТИТУТЕ</a></li>
 									<li><a href="asinem.html">АССОЦИАЦИЯ</a></li>
-									<li><a href="#">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
+									<li><a href="nir.html">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
 									<li><a href="#">КОНТАКТЫ</a></li>
 								</ul>
 							</div>
