--- a/NIINM/nir.html
+++ b/NIINM/nir.html
@@ -104,7 +104,7 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li class="current-page"><a href="#">Главная</a></li>
+				        	<li><a href="#">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
@@ -119,7 +119,7 @@
 				                </ul>
 				        	</li>
 				            <li><a href="asinem.html">Ассоциация</a></li>
-				            <li><a href="nir.html">Последние Разработки</a></li>
+				            <li class="current-page"><a href="nir.html">Последние Разработки</a></li>
 				            <li><a href="#">Услуги</a></li>
 				            <li><a href="#">Контакты</a></li>
 				            <li><a href="lab.html">Лаборатория</a></li>
@@ -147,73 +147,33 @@
 				</div>
 			</div>
 		</header>
-		<!--! Start-banner -->
-		<section class="start-banner" style="background-image: url('img/start_banner1.png');">
-			<div class="container">
-				<div class="row align-items-end justify-content-sm-end justify-content-center">
-					<span class="start-banner__title">РАЗРАБОТКА, ПРОИЗВОДСТВО И ПРОДАЖА НЕТКАНЫХ МАТЕРИАЛОВ</span>
-					<div class="start-banner__white-divider"></div>
-				</div>
-			</div>
-		</section>
 		<!--! Page-title -->
-		<section class="page-title"><h1>Главная</h1></section>
+		<section class="page-title"><h1>ПОСЛЕДНИЕ РАЗРАБОТКИ</h1></section>
 		<!-- Container -->
 		<div class="container">
+			<strong style="text-align: center;">Антимикробное нетканое полотно для улавливания взрывных веществ.</strong>
+			<br>
+			<br>
+			<p>Разработанный антимикробный нетканый материал обладает эффективной адсорбцией частиц взрывчатых веществ. Материал может найти широкое применение в проборах по обнаружению взрывчатых веществ (используются в кинологии и криминалистике). Существуют зоны повышенного контроля, (аэропорты, воздушные суда, наземный и морской транспорт), где возможно обнаружение взрывчатых веществ.</p>
+			<br>
+			<br>
 			<!--! Card-block -->
 			<div class="card-block right">
-				<img class="card-block__img" src="img/card1.png" alt="Научно-исследовательский институт нетканых материалов">
+				<img class="card-block__img" src="img/card5.png" alt="Научно-исследовательский институт нетканых материалов">
 				<div class="card-block__content">
-					<p>ООО «Научно-исследовательский институт нетканых материа- лов» (ООО "НИИНМ") является правопреемником Открытого Акционерного Общества "Научно-исследовательский институт нетканых материалов" и, ранее Всесоюзного научно-исследовательского институтанетканых материалов (ВНИИНТМ) основанного Минлегпромом СССР в 1963 году. Исследования и разработки ученых и специалистов института сформировали научно-техническую базу отечественной промышленности нетканых материалов. </p>
-					<p>В различные годы по разработкам института выпускалось до 70% общего объеманетканой продукции в стране.</p>
+					<strong>Характеристики</strong>
+					<ul>
+						<li>Поверхностная плотность, г/м 250±25</li>
+						<li>Ширина ,мм 155</li>
+						<li>Толщина при удельной нагрузке 5 кПа, мм 3±0,3</li>
+						<li>Разрывная нагрузка, Н, не менее -в продольном направлении 80 -поперечном направлении 200</li>
+						<li>Удлинение при разрыве, %, не более -в продольном направлении 160 -поперечном направлении 100</li>
+						<li>Воздухопроницаемость, дм3/м2 с, не менее 250</li>
+						<li>Сорбционная ёмкость, г/г 17</li>
+						<li>Массовая доля антимикробного вещества, % 1,0/1,7</li>
+					</ul>
 				</div>
 			</div>
-			<br>
-			<br>
-			<!-- Quote block -->
-			<hr>
-			<div class="quote-block">
-				<p>Сегодня главным направлением работы института является разработка и производство высокоэффективных нетканых материалов технического назначения, в том числе для фильтровальной техники.</p>
-			</div>
-			<hr>
-			<!-- ./Quote block -->
-			<br>
-			<br>
-			<!--! Card-block -->
-			<div class="card-block">
-				<img class="card-block__img" src="img/card2.png" alt="Научно-исследовательский институт нетканых материалов">
-				<div class="card-block__content">
-					<p>Разработанные и выпускаемые ООО "НИИНМ" фильтровальные материалы успешно конкурируют с продукцией ведущих мировых производителей (в том числе DuPont, Freudenberg, Lurgi), и по некоторым параметрам превосходят их.</p>
-					<p>Имеющийся набор пилотных установок, которые позволяет варьировать технологическими операциями и получать образцы и опытные партии нетканых материалов, сложных структур, шириной 40см. При оптимальном расходе сырья 1- 5 кг.</p>
-					<p>Помимо производственных мощностей, ООО "НИИНМ" обладает достаточным научным потенциалом, способным генерироватьнаучные идеи, воплощать их в конкретные разработки для различных отраслей промышленности.Результаты научных исследований сотрудников инстита регулярно публикуются в отраслевых и специализированных изданиях.</p>
-				</div>
-			</div>
-			<br>
-			<br>
-			<!-- Quote block -->
-			<hr>
-			<div class="quote-block">
-				<p>ООО "НИИНМ" принимает к разработке и освоению заказы на нетканые материалы эксклюзивных структур и свойств в соответствии с требованиями заказчика.</p>
-			</div>
-			<hr>
-			<!-- ./Quote block -->
-			<br>
-			<br>
-			<!--! Columns -->
-			<section class="row columns-section justify-content-between">
-				<div class="col-lg-5 col-md-6 col-12">
-					<h3>Основные направления деятельности института:</h3>
-					<br>
-					<p>Разработка и освоение новых видов технологических процессов изготовления нетканых материалов из различных видов волокнистого и не волокнистого сырья.</p>
-					<p>Разработка новых видов оригинальных структур нетканых материалов различного назначения в соответствии с требованиями потребителя.</p>
-					<p>Осуществление инжиниринговых работ по организации производства нетканых материалов.</p>
-					<p>Осуществление работ по стандартизации, испытанию и сертификации продукции для предприятий производителей нетканых материалов.</p>
-				</div>
-				<div class="col-lg-5 col-md-6 col-12">
-					<p>Сотрудниками института создано более 200 патентов на изобретения, полезную модель, и свидетельств на товарные знаки. За последние годы разработки института награждены медалями, в том числе золотыми и серебряными, дипломами Всемирного салона изобретений, научных исследований и промышленных инноваций «Брюссель-Эврика», международных выставок и салонов инноваций и инвестиций.</p>
-					<p>Результаты НИР института представлены на международных конгрессах, в том числе ЭДАНА (Брюссель, Женева), ИНДЕКС (Прага), ЭЛТЕКС (Польша), АКВАТЕРРА (Санкт-Петербург), Вейст-Тек (Москва). Два сотрудника института являются лауреатами премии Правительства РФ в области науки и техники.</p>
-				</div>
-			</section>
 			<br><br>
 		</div>
 		<!--! News -->
@@ -301,7 +261,7 @@
 								<ul class="footer-menu__links">
 									<li><a href="about.html">ОБ ИНСТИТУТЕ</a></li>
 									<li><a href="asinem.html">АССОЦИАЦИЯ</a></li>
-									<li><a href="nir.html">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
+									<li><a href="#">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
 									<li><a href="#">КОНТАКТЫ</a></li>
 								</ul>
 							</div>
